// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > dark colors > renders danger color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 rounded-xl px-4 py-2 lg:px-3 flex-row bg-pca-grey-900 text-pca-white hover:bg-pca-grey-800 active:bg-pca-grey-800 dark:bg-pca-red-500 dark:text-pca-white dark:hover:bg-pca-red-700 dark:active:bg-pca-red-700"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      danger
    </span>
  </button>
</div>
`;

exports[`Button > dark colors > renders primary color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 rounded-xl px-4 py-2 lg:px-3 flex-row bg-pca-grey-900 text-pca-white hover:bg-pca-grey-800 active:bg-pca-grey-800 dark:bg-pca-white dark:text-pca-grey-900 dark:hover:bg-pca-grey-300 dark:active:bg-pca-grey-300"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      primary
    </span>
  </button>
</div>
`;

exports[`Button > dark colors > renders secondary color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 rounded-xl px-4 py-2 lg:px-3 flex-row bg-pca-grey-900 text-pca-white hover:bg-pca-grey-800 active:bg-pca-grey-800 dark:bg-transparent dark:text-pca-white dark:hover:bg-pca-grey-800 dark:active:bg-pca-grey-800"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      secondary
    </span>
  </button>
</div>
`;

exports[`Button > dark colors > renders upgrade color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 rounded-xl px-4 py-2 lg:px-3 flex-row bg-pca-grey-900 text-pca-white hover:bg-pca-grey-800 active:bg-pca-grey-800 dark:bg-pca-yellow-500 dark:text-pca-grey-900 dark:hover:bg-pca-yellow-700 dark:active:bg-pca-yellow-700"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      upgrade
    </span>
  </button>
</div>
`;

exports[`Button > light colors > renders danger color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 rounded-xl px-4 py-2 lg:px-3 flex-row bg-pca-red-500 text-pca-white hover:bg-pca-red-700 active:bg-pca-red-700 dark:bg-pca-red-500 dark:text-pca-white dark:hover:bg-pca-red-700 dark:active:bg-pca-red-700"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      danger
    </span>
  </button>
</div>
`;

exports[`Button > light colors > renders primary color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 rounded-xl px-4 py-2 lg:px-3 flex-row bg-pca-grey-900 text-pca-white hover:bg-pca-grey-800 active:bg-pca-grey-800 dark:bg-pca-white dark:text-pca-grey-900 dark:hover:bg-pca-grey-300 dark:active:bg-pca-grey-300"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      primary
    </span>
  </button>
</div>
`;

exports[`Button > light colors > renders secondary color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 rounded-xl px-4 py-2 lg:px-3 flex-row bg-transparent text-pca-grey-900 hover:bg-pca-grey-200 active:bg-pca-grey-200 dark:bg-transparent dark:text-pca-white dark:hover:bg-pca-grey-800 dark:active:bg-pca-grey-800"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      secondary
    </span>
  </button>
</div>
`;

exports[`Button > light colors > renders upgrade color with expected class 1`] = `
<div>
  <button
    class="relative overflow-hidden active:scale-[0.97] flex items-center justify-center gap-2 transition-[background-color,color,box-shadow,transform] duration-150 ease-out h-11 lg:h-9 focus:outline-hidden focus-visible:ring-2 focus-visible:ring-pca-grey-500 rounded-xl px-4 py-2 lg:px-3 flex-row bg-pca-yellow-500 text-pca-grey-900 hover:bg-pca-yellow-700 active:bg-pca-yellow-700 dark:bg-pca-yellow-500 dark:text-pca-grey-900 dark:hover:bg-pca-yellow-700 dark:active:bg-pca-yellow-700"
  >
    <span
      class="antialiased font-inter text-sm text-pca-grey-900 dark:text-white font-medium text-inherit! leading-none"
    >
      upgrade
    </span>
  </button>
</div>
`;
